--- a/index.html
+++ b/index.html
@@ -81,19 +81,126 @@
         .hero {
             padding: 120px 0 100px;
             text-align: center;
+            position: relative;
+            overflow: hidden;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* Spinning Earth Globe Hero Background */
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 800px;
+            height: 800px;
+            background: radial-gradient(circle at 35% 35%, #4da6ff 0%, #0099ff 15%, #001a4d 40%, #000a2e 70%, #000000 100%);
+            border-radius: 50%;
+            z-index: 0;
+            animation: rotateEarth 60s linear infinite;
+            box-shadow: 
+                0 0 60px rgba(0, 153, 255, 0.4),
+                0 0 120px rgba(0, 26, 77, 0.3),
+                inset -40px -40px 80px rgba(0, 10, 46, 0.5),
+                inset 30px 30px 60px rgba(77, 166, 255, 0.2);
+        }
+
+        /* City Lights Layer 1 - Golden glow spots */
+        .hero::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 800px;
+            height: 800px;
+            border-radius: 50%;
+            z-index: 1;
+            animation: rotateEarth 60s linear infinite;
+            background-image: 
+                radial-gradient(circle 8px at 45% 30%, #ffcc00 0%, #ff9900 40%, transparent 70%),
+                radial-gradient(circle 6px at 38% 35%, #ff9900 0%, transparent 60%),
+                radial-gradient(circle 7px at 52% 28%, #ffcc00 0%, #ff9900 30%, transparent 60%),
+                radial-gradient(circle 5px at 48% 32%, #ff9900 0%, transparent 50%),
+                radial-gradient(circle 9px at 42% 25%, #ffcc00 0%, #ff9900 35%, transparent 65%),
+                radial-gradient(circle 6px at 55% 35%, #ff9900 0%, transparent 55%),
+                radial-gradient(circle 7px at 40% 40%, #ffcc00 0%, #ff9900 40%, transparent 70%),
+                radial-gradient(circle 5px at 50% 38%, #ff9900 0%, transparent 50%),
+                radial-gradient(circle 8px at 35% 32%, #ffcc00 0%, transparent 60%),
+                radial-gradient(circle 6px at 58% 32%, #ff9900 0%, #ffcc00 20%, transparent 55%),
+                radial-gradient(circle 7px at 43% 36%, #ffcc00 0%, #ff9900 35%, transparent 65%),
+                radial-gradient(circle 5px at 48% 42%, #ff9900 0%, transparent 50%),
+                radial-gradient(circle 8px at 52% 25%, #ffcc00 0%, #ff9900 40%, transparent 70%),
+                radial-gradient(circle 6px at 36% 38%, #ff9900 0%, transparent 55%),
+                radial-gradient(circle 7px at 46% 31%, #ffcc00 0%, transparent 60%),
+                radial-gradient(circle 5px at 32% 28%, #ff9900 0%, transparent 50%),
+                radial-gradient(circle 6px at 60% 40%, #ffcc00 0%, #ff9900 30%, transparent 65%),
+                radial-gradient(circle 7px at 44% 43%, #ff9900 0%, transparent 55%),
+                radial-gradient(circle 8px at 54% 36%, #ffcc00 0%, transparent 70%),
+                radial-gradient(circle 5px at 41% 29%, #ff9900 0%, transparent 50%),
+                radial-gradient(circle 7px at 49% 26%, #ffcc00 0%, #ff9900 35%, transparent 65%),
+                radial-gradient(circle 6px at 37% 42%, #ff9900 0%, transparent 55%),
+                radial-gradient(circle 8px at 56% 29%, #ffcc00 0%, #ff9900 40%, transparent 70%),
+                radial-gradient(circle 5px at 45% 38%, #ff9900 0%, transparent 50%),
+                radial-gradient(circle 7px at 51% 33%, #ffcc00 0%, transparent 60%);
+            filter: drop-shadow(0 0 25px rgba(255, 204, 0, 0.5)) drop-shadow(0 0 15px rgba(255, 153, 0, 0.4)) drop-shadow(0 0 40px rgba(255, 153, 0, 0.2));
+        }
+
+        /* Additional atmospheric glow layer */
+        .hero .container::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 900px;
+            height: 900px;
+            border-radius: 50%;
+            background: radial-gradient(circle, transparent 0%, transparent 45%, rgba(0, 153, 255, 0.15) 70%, rgba(0, 26, 77, 0.2) 100%);
+            z-index: -1;
+            animation: rotateEarthSlow 90s linear infinite reverse;
+        }
+
+        @keyframes rotateEarth {
+            from {
+                transform: translate(-50%, -50%) rotateZ(0deg);
+            }
+            to {
+                transform: translate(-50%, -50%) rotateZ(360deg);
+            }
+        }
+
+        @keyframes rotateEarthSlow {
+            from {
+                transform: translate(-50%, -50%) rotateZ(0deg);
+            }
+            to {
+                transform: translate(-50%, -50%) rotateZ(360deg);
+            }
+        }
+
+        .hero .container {
+            position: relative;
+            z-index: 10;
         }
 
         .badge {
             display: inline-block;
             padding: 8px 16px;
-            background: var(--bg-card);
-            border: 1px solid var(--border);
+            background: rgba(0, 26, 77, 0.6);
+            border: 1px solid rgba(0, 153, 255, 0.3);
             border-radius: 100px;
             font-size: 0.85rem;
-            color: var(--text-secondary);
+            color: #0099ff;
             margin-bottom: 32px;
             letter-spacing: 0.05em;
             text-transform: uppercase;
+            position: relative;
+            z-index: 10;
         }
 
         .hero h1 {
@@ -106,6 +213,8 @@
             max-width: 700px;
             margin-left: auto;
             margin-right: auto;
+            text-shadow: 0 0 30px rgba(0, 153, 255, 0.3), 0 0 60px rgba(255, 204, 0, 0.15);
+            position: relative;
         }
 
         .hero p {
@@ -113,6 +222,7 @@
             color: var(--text-secondary);
             max-width: 520px;
             margin: 0 auto 48px;
+            position: relative;
         }
 
         .signup-form {
@@ -122,6 +232,8 @@
             gap: 16px;
             max-width: 440px;
             margin: 0 auto;
+            position: relative;
+            z-index: 10;
         }
 
         .input-wrapper {
@@ -347,8 +459,32 @@
         .hero p { animation: fadeUp 0.6s ease forwards; animation-delay: 0.3s; opacity: 0; }
         .signup-form { animation: fadeUp 0.6s ease forwards; animation-delay: 0.4s; opacity: 0; }
 
+        @media (max-width: 1024px) {
+            .hero::before,
+            .hero::after {
+                width: 600px;
+                height: 600px;
+            }
+
+            .hero .container::before {
+                width: 700px;
+                height: 700px;
+            }
+        }
+
         @media (max-width: 640px) {
-            .hero { padding: 80px 0 60px; }
+            .hero { padding: 80px 0 60px; min-height: auto; }
+            .hero::before,
+            .hero::after {
+                width: 400px;
+                height: 400px;
+            }
+
+            .hero .container::before {
+                width: 450px;
+                height: 450px;
+            }
+
             .input-wrapper { flex-direction: column; }
             .signup-form button { width: 100%; border-radius: 0 0 11px 11px; }
             .features, .founder { padding: 60px 0; }
